--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="//unpkg.com/docsify@4/lib/themes/vue.css">
-    <link rel="stylesheet" href="//unpkg.com/docsify-sidebar-collapse/dist/sidebar.min.css" />
+    <link rel="stylesheet" href="./library/docsify@4/lib/themes/vue.css">
+    <link rel="stylesheet" href="./library/docsify-sidebar-collapse@1.3.5/dist/sidebar.min.css" />
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -46,14 +46,14 @@
         }
     </script>
     <!-- Docsify v4 -->
-    <script src="//unpkg.com/docsify@4"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/emoji.min.js"></script>
-    <script src="//unpkg.com/docsify-copy-code"></script>
-    <script src="//unpkg.com/docsify/lib/plugins/disqus.min.js"></script>
-    <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
-    <script src="//unpkg.com/docsify-footer-enh/dist/docsify-footer-enh.min.js"></script>
-    <script src="//unpkg.com/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
+    <script src="./library/docsify@4/lib/docsify.min.js"></script>
+    <script src="./library/docsify@4/lib/plugins/search.min.js"></script>
+    <script src="./library/docsify@4/lib/plugins/emoji.min.js"></script>
+    <script src="./library/docsify-copy-code@2.1.1/dist/docsify-copy-code.min.js"></script>
+    <script src="./library/docsify@4/lib/plugins/disqus.min.js"></script>
+    <script src="./library/docsify-sidebar-collapse@1.3.5/dist/docsify-sidebar-collapse.min.js"></script>
+    <script src="./library/docsify-footer-enh@0.0.6/dist/docsify-footer-enh.min.js"></script>
+    <script src="./library/@alertbox/docsify-footer@1.0.0-0/dist/docsify-footer.min.js"></script>
 </body>
 
 </html>
