--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="./library/docsify-sidebar-collapse@1.3.5/dist/docsify-sidebar-collapse.min.js"></script>
     <script src="./library/docsify-footer-enh@0.0.6/dist/docsify-footer-enh.min.js"></script>
     <script src="./library/@alertbox/docsify-footer@1.0.0-0/dist/docsify-footer.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 </body>
 
 </html>
