--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="./library/docsify@4/lib/themes/vue.css">
     <link rel="stylesheet" href="./library/docsify-sidebar-collapse@1.3.5/dist/sidebar.min.css" />
+    <script type="text/javascript" src="//api.tongjiniao.com/c?_=656939525843935232" async></script>
     <script>
         var _hmt = _hmt || [];
         (function() {
