增加个人联系方式

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./library/docsify@4/lib/themes/vue.css">
     <link rel="stylesheet" href="./library/docsify-sidebar-collapse@1.3.5/dist/sidebar.min.css" />
     <script type="text/javascript" src="//api.tongjiniao.com/c?_=656939525843935232" async></script>
+    <!-- <script src="./library/vue3.js"></script> -->
     <script>
         var _hmt = _hmt || [];
         (function() {
@@ -32,6 +33,7 @@
             sidebarDisplayLevel: 1,
             coverpage: true,
             subMaxLevel: 5,
+            maxLevel: 3,
             alias: {
                 '/.*/_sidebar.md': '/_sidebar.md'
             },
