--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="google-site-verification" content="YWMpBT2_F4BjWaaxMIcRKpE67cNAIvWDMI0urtuP0LU" />
+    <meta name="msvalidate.01" content="9AD0E25B80B9872EC1DE98512F383DC4" />
     <meta charset="UTF-8">
     <title>My Cocos Creator Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
