--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="./library/docsify@4/lib/themes/vue.css">
     <link rel="stylesheet" href="./library/docsify-sidebar-collapse@1.3.5/dist/sidebar.min.css" />
+    <script src="https://sdk.51.la/perf/js-sdk-perf.min.js" crossorigin="anonymous"></script>
+    <script>
+      new LingQue.Monitor().init({id:"3KhQWq8rNLJ2EEDb"});
+    </script>
     <script type="text/javascript" src="//api.tongjiniao.com/c?_=656939525843935232" async></script>
     <!-- <script src="./library/vue3.js"></script> -->
     <script>
