--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L2EQEMCV5L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-L2EQEMCV5L');
+    </script>
 </head>
 
 <body>
