--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-adsense-account" content="ca-pub-6912299039882192">
     <meta name="google-site-verification" content="YWMpBT2_F4BjWaaxMIcRKpE67cNAIvWDMI0urtuP0LU" />
     <meta name="msvalidate.01" content="9AD0E25B80B9872EC1DE98512F383DC4" />
     <meta charset="UTF-8">
